--- a/src/collective/notices/browser/css/collective.notices.css
+++ b/src/collective/notices/browser/css/collective.notices.css
@@ -11,6 +11,9 @@
   padding: 0.5em;
   font-size: 12px;
 }
+#notices-viewlet .hidden {
+  display: none;
+}
 #notices-viewlet .notice-actions-container {
   position: absolute;
   top: 0;
